[gd_scene load_steps=21 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Board.gd" type="Script" id=2]
[ext_resource path="res://Scripts/States/IdlePlayer.gd" type="Script" id=3]
[ext_resource path="res://Scripts/States/IdleEnemy.gd" type="Script" id=4]
[ext_resource path="res://Scripts/States/Inactive.gd" type="Script" id=5]
[ext_resource path="res://Scripts/States/Moving.gd" type="Script" id=6]
[ext_resource path="res://Scripts/States/Chopping.gd" type="Script" id=7]
[ext_resource path="res://Assets/Audio/chop01.wav" type="Sample" id=8]
[ext_resource path="res://Assets/Audio/chop02.wav" type="Sample" id=9]
[ext_resource path="res://Assets/Audio/die.wav" type="Sample" id=10]
[ext_resource path="res://Assets/Audio/enemy01.wav" type="Sample" id=11]
[ext_resource path="res://Assets/Audio/enemy02.wav" type="Sample" id=12]
[ext_resource path="res://Assets/Audio/footsteps01.wav" type="Sample" id=13]
[ext_resource path="res://Assets/Audio/footsteps02.wav" type="Sample" id=14]
[ext_resource path="res://Assets/Audio/fruit01.wav" type="Sample" id=15]
[ext_resource path="res://Assets/Audio/fruit02.wav" type="Sample" id=16]
[ext_resource path="res://Assets/Audio/soda01.wav" type="Sample" id=17]
[ext_resource path="res://Assets/Audio/soda02.wav" type="Sample" id=18]
[ext_resource path="res://Scenes/Controls.tscn" type="PackedScene" id=19]

[sub_resource type="SampleLibrary" id=1]

samples/chop01 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }
samples/chop02 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }
samples/die = { "db":0.0, "pitch":1.0, "sample":ExtResource( 10 ) }
samples/enemy01 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 11 ) }
samples/enemy02 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 12 ) }
samples/footsteps01 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 13 ) }
samples/footsteps02 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 14 ) }
samples/fruit01 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 15 ) }
samples/fruit02 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 16 ) }
samples/soda01 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 17 ) }
samples/soda02 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 18 ) }

[node name="Game" type="Node"]

script/script = ExtResource( 1 )
window_zoom = 1

[node name="Board" type="Node" parent="."]

script/script = ExtResource( 2 )
inner_grid_size = Vector2( 8, 17 )
perim_thickness = Vector2( 1, 1 )
count_obstacles = Vector2( 2, 7 )
count_items = Vector2( 3, 6 )
count_enemies = Vector2( 2, 2 )

[node name="Actors" type="Node2D" parent="Board"]

z/z = 2

[node name="States" type="Node" parent="."]

[node name="IdlePlayer" type="Node" parent="States"]

script/script = ExtResource( 3 )

[node name="IdleEnemy" type="Node" parent="States"]

script/script = ExtResource( 4 )

[node name="Inactive" type="Node" parent="States"]

script/script = ExtResource( 5 )

[node name="Moving" type="Node" parent="States"]

script/script = ExtResource( 6 )
energy_cost = 5
duration = 0.1

[node name="Chopping" type="Node" parent="States"]

script/script = ExtResource( 7 )
energy_cost = 5

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 2
config/samples = SubResource( 1 )
default/volume_db = -10.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="HealthPanel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 646.0
margin/right = 252.0
margin/bottom = 686.0

[node name="HealthLabel" type="Label" parent="HealthPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 7.0
margin/right = 109.0
margin/bottom = 41.0
text = "HP: 100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DeadPanelNode" type="Node2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 47.2198, 126.868 )
transform/scale = Vector2( 1.12335, 1.7885 )
z/z = 22

[node name="Panel" type="Panel" parent="DeadPanelNode"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -16.0
margin/top = -16.0
margin/right = 272.0
margin/bottom = 272.0

[node name="Label" type="Label" parent="DeadPanelNode/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 24.0
margin/right = 273.0
margin/bottom = 234.0
text = "U Ded\n\nWanna go again\? \n"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Yes" type="Button" parent="DeadPanelNode/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 47.0
margin/top = 256.0
margin/right = 136.0
margin/bottom = 276.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="No" type="Button" parent="DeadPanelNode/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 151.0
margin/top = 256.0
margin/right = 240.0
margin/bottom = 276.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Container" parent="." instance=ExtResource( 19 )]

margin/left = 296.0
margin/top = 596.0
margin/right = 366.0
margin/bottom = 666.0

[connection signal="pressed" from="DeadPanelNode/Panel/Yes" to="." method="_on_Yes_pressed"]

[connection signal="pressed" from="DeadPanelNode/Panel/No" to="." method="_on_No_pressed"]


